Fixed the spacings

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ a {
 /* Feature section css */
 .feature-section {
     background-color: white;
-    padding: 0 20px;
+    padding: 0 0px;
 }
 
 
@@ -190,7 +190,6 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 40px; 
     margin-left: 40px;
 }
 
@@ -212,7 +211,7 @@ a {
 .feature-text {
     flex: 1; 
     max-width: 50%;
-    padding: 0px;
+    margin-right: 50px;
 }
 
 .feature-headline {
@@ -221,6 +220,7 @@ a {
     line-height: 1.2;
     color: var(--text-dark);
     margin-bottom: 20px;
+    width: 600px;
 }
 
 .feature-headline span.highlight {
@@ -232,13 +232,13 @@ a {
     color: #928e8e;
     line-height: 1.5;
     margin-bottom: 30px;
-    width: 650px;
+    width: 680px;
 }
 
 .feature-actions {
     display: flex;
     gap: 5px; 
-    margin-left: 15px;
+    margin-left: 0px;
 }
 
 .feature-actions .contact-btn {
@@ -379,6 +379,7 @@ a {
 
 .doctor-card {
     text-align: center;
+    margin-bottom: 80px;
 }
 
 .doctor-image {
@@ -608,6 +609,7 @@ a {
     background-color: white;
     text-align: left;
     overflow: hidden;
+    margin-bottom: 150px;
    
 
 }
@@ -1116,7 +1118,12 @@ a {
     display: none;
 }
 
-
+.icons-div {
+        display: none;
+        
+    }
+    
+  
 
 @media (max-width: 768px) {
     
@@ -1203,11 +1210,10 @@ a {
     .split-content {
         flex-direction: column; 
         gap: 20px;
-        margin: 0px 0px;
+        margin: 0px 20px;
        
     }
-    .feature-image,
-    .feature-text {
+    .feature-image{
         max-width: 100%; 
         width: 100%;
     }
@@ -1221,21 +1227,25 @@ a {
     }
     .feature-text {
         text-align: center;
-        padding: 0 0rem;
+         padding: 0 8px;
+         max-width: 100%; 
+         width: 100%;
+         margin-left: 40px;
+      
         
     }
     .feature-headline{
         text-align: left;
         font-size: 30px;
+        width: 500px;
     }
     .feature-text .feature-body{
         text-align: left;
-        padding: 0 0rem;
+        width: 500px;
         width: 100%;
     
     }
     .feature-actions {
-        margin: 0px 0px;
         justify-content: center; 
         margin-bottom: 50px;
         flex-direction: column;
@@ -1456,7 +1466,11 @@ a {
         width: 100%;
     }
     .contact-form {
-        padding: 30px 12px;
+        padding: 20px 8px;
+    }
+    .contact-form .send-message-btn{
+        margin: 10px 20px;
+
     }
 
     .map-form-section {
@@ -1465,7 +1479,7 @@ a {
 
     /* Footer Section */
     .footer-section {
-        padding: 60px 20px;
+        padding: 120px 20px;
     }
     .footer-grid {
         grid-template-columns: 1fr;
@@ -1496,7 +1510,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: start;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     gap: 20px;
    
 
@@ -1633,5 +1647,29 @@ a {
 .btn-appointment:hover {
     background-color: #e74136;
 }
+
+.icons-div {
+        display: flex;
+        width: 100%;
+        padding-left: 20px;
+        padding-bottom: 20px;
+        margin-bottom: 0px;
+    }
+    
+    .social-icon {
+        line-height: 4;
+        color: rgb(255, 255, 255);
+    }
+    
+    .social-icon-div {
+        display: inline;
+        width: 55px;
+        height: 55px;
+        line-height: 55px;
+        border-radius: 50%;
+        background-color: #247cfa;
+        margin-right: 20px;
+        text-align: center;
+    }
 
 }
